<resources>
    <string name="app_name">喵记</string>
    <string name="title_activity_login">Sign in</string>

    <!--Login-->
    <string name="user_name">邮箱</string>
    <string name="password">密码</string>
    <string name="register">还没有账号？点击注册</string>
    <string name="login">登陆</string>
    <string name="forget_password">忘记密码？</string>
    <string name="automatic_login">自动登录</string>
    <string name="register_username">用户名：</string>
    <string name="register_edit_username">请输入你想要的昵称</string>
    <string name="register_email">邮箱：</string>
    <string name="register_edit_email">要与稍后验证的邮箱保持一致</string>
    <string name="forget_email">请输入注册时的邮箱</string>
    <string name="register_password">密码：</string>
    <string name="register_edit_password">请输入4到16位字符</string>
    <string name="register_confirm_password">确认密码：</string>
    <string name="register_edit_confirm_password">请与密码保持一致</string>
    <string name="register_register">注册</string>
    <string name="forget_password_button">发送验证信息</string>
    <string name="setting">设置</string>
    <string name="update_application">检查更新</string>
    <string name="share">分享</string>
    <string name="change_password">修改密码</string>
    <string name="logout">退出登录</string>

    <string name="red_mood">姨妈红</string>
    <string name="pink_mood">少女粉</string>
    <string name="yellow_mood">咸蛋黄</string>
    <string name="green_mood">早苗绿</string>
    <string name="blue_mood">胖次蓝</string>
    <string name="purple_mood">基佬紫</string>
    <string name="gray_mood">暗夜灰</string>
    <string name="all_mood">全色彩</string>

    <string name="cancle">取消</string>
    <string name="delet">删除</string>
</resources>
