<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bianqian.activity.RegisterActivity"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:scaleType="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/login_back">
        <include layout="@layout/basic_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/RegisterLinearLayout">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                style="@style/RegisterText"
                android:text="@string/register_username"
                />
            <com.example.bianqian.view.LineEditText
                android:id="@+id/register_uesrname"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="7"
                android:hint="@string/register_edit_username"
                style="@style/RegisterEdit"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/RegisterLinearLayout">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                style="@style/RegisterText"
                android:text="@string/register_email"
                />
            <com.example.bianqian.view.LineEditText
                android:id="@+id/register_email"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="7"
                android:hint="@string/register_edit_email"
                style="@style/RegisterEdit"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/RegisterLinearLayout">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                style="@style/RegisterText"
                android:text="@string/register_password"
                />
            <com.example.bianqian.view.LineEditText
                android:id="@+id/register_password"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="7"
                android:hint="@string/register_edit_password"
                style="@style/RegisterEdit"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/RegisterLinearLayout">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                style="@style/RegisterText"
                android:text="@string/register_confirm_password"
                />
            <com.example.bianqian.view.LineEditText
                android:id="@+id/register_confirm_password"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="7"
                android:hint="@string/register_edit_confirm_password"
                style="@style/RegisterEdit"/>
        </LinearLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_register"
            style="@style/RegisterLinearLayout"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@color/buttoncolor"
            />
        >
    </LinearLayout>


</FrameLayout>
